--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,14 +1,30 @@
+[AWS]
+KEY=YOUR_KEY
+SECRET=YOUR_SECRET
+
+[DWH]
+DWH_CLUSTER_TYPE=multi-node
+DWH_NUM_NODES=4
+DWH_NODE_TYPE=dc2.large
+
+DWH_IAM_ROLE_NAME=dwhRole
+DWH_CLUSTER_IDENTIFIER=dwhcluster
+DWH_DB=dwhdb
+DWH_DB_USER=dwhuser
+DWH_DB_PASSWORD=Passw0rd
+DWH_PORT=5439
+
 [CLUSTER]
-HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
+HOST=YOUR_HOST_ADDRESS
+DB_NAME=dwhdb
+DB_USER=dwhuser
+DB_PASSWORD=Passw0rd
+DB_PORT=5439
 
 [IAM_ROLE]
-ARN=''
+ARN= YOUR_ARN
 
 [S3]
-LOG_DATA='s3://udacity-dend/log-data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song-data'
+LOG_DATA=s3://udacity-dend/log_data
+LOG_JSONPATH=s3://udacity-dend/log_json_path.json
+SONG_DATA=s3://udacity-dend/song_datasong-data'
